<resources>
    <string name="app_name">PetTrack</string>
    <!-- Strings usados en atributo descripcion -->
    <string name="descripcionLogo">Logo de la aplicacion compuesto por un perro, un gato y una tablet</string>
    <string name="btn_volver_desc">Botón con forma de flecha</string>

    <!-- Strings usados en la pantalla de inicio -->
    <string name="hola">¡HOLA!</string>
    <string name="pregunta_1">¿ESTÁS REGISTRADO?</string>
    <string name="pregunta_2">¿NO ESTÁS REGISTRADO?</string>
    <string name="txt_btn_inicia">INICIA SESION</string>
    <string name="txt_btn_registrarse">REGISTRATE</string>

    <!-- Strings usados en la pantalla de login -->
    <string name="inicia">INICIA SESION</string>
    <string name="email">Ingrese su e-mail</string>
    <string name="ej_email">email@ejemplo.com</string>
    <string name="password">Ingrese su Contraseña</string>
    <string name="ej_password">******</string>
    <string name="btn_inicia">INICIAR</string>

    <!-- Strings usados en la pantalla de registrar -->
    <string name="tvRegistrarCuenta">Registra una nueva cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="ej_nombre">Ingrese su nombre</string>
    <string name="email_1">Ingrese un e-mail</string>
    <string name="clave">Ingrese una contraseña</string>
    <string name="clave2">Repita su contraseña</string>
    <string name="btn_registrar">Registrar cuenta</string>

    <!--Strings usados en la pantalla de menú principal (home)-->
    <string name="menu_home">Menú principal</string>
    <string name="btn_agregar_mascota">+REGISTRAR MASCOTA</string>
    <string name="btn_mascotas">MASCOTAS</string>
    <string name="btn_recordatorios">RECORDATORIOS</string>

    <!--Strings usados en la pantalla de menú de mascotas (MASCOTAS)-->
    <string name="menu_mascotas">Tus mascotas</string>
    <string name="btn_ver_mascotas">VER MASCOTAS</string>

    <!--Strings usados en la pantalla de menú de Registrar Mascotas -->
    <string name="foto_mascota">Añadir una foto de perfil</string>
    <string name="especie">Especie</string>
    <string name="nacimiento">Fecha de nacimiento</string>
    <string name="hembra">Hembra</string>
    <string name="macho">Macho</string>
    <string name="eligir_fecha">Click aquí y Seleccione una fecha</string>
    <string name="ej_nombre_mascota">Ingrese el nombre de su mascota</string>
    <string name="registra_tu_mascota">Registra tu mascota</string>
    <string name="Sexo_Mascota">Sexo:</string>
    <string name="razaMascota">Raza:</string>
    <string name="ej_raza_mascota">ingrese la raza de su mascota</string>
    <string name="btn_registrar_mascota">REGISTRAR MASCOTA</string>

    <!--Strings usados en la pantalla de agregar recordatorios-->
    <string name="tv_fecha_recordatorio">Seleccione la fecha del recordatio</string>
    <string name="tv_motivo_recordatorio">Motivo del recordatorio</string>
    <string name="tv_mascota_recordatorio">Mascota a la que aplica</string>
    <string name="tv_title_recordatorios">Añadir Racordatorio</string>
    <string name="btn_registrar_recordatorio">REGISTRAR RECORDATORIO</string>
    <string name="btn_cancelar">CANCELAR</string>
    <string name="registrar_recordatorio_H">+Registrar recordatorio</string>

    <!--Strings usados en la pantalla de agregar vacunacion-->
    <string name="tv_vacuna_title">Registrar vacunación</string>
    <string name="tv_vacuna_1">Nombre/Motivo de la vacuna</string>
    <string name="tv_fecha_vacuna_1">Fecha de aplicación</string>
    <string name="tv_fecha_vacuna_2">Fecha de próxima aplicación</string>
    <string name="btn_vacunacion_1">REGISTRAR VACUNACIÓN</string>
    <string name="ej_vacuna">Parvovirus</string>

    <!--Strings usados en la pantalla de agregar desparasitaciones-->
    <string name="tv_desparasitacion_title">Registrar desparasitación</string>
    <string name="tv_desparasitacion_1">Marca del desparasitante</string>
    <string name="tv_desparasitacion_2">Tipo de desparasitante</string>
    <string name="tv_desparasitacion_3">Fecha de administración</string>
    <string name="tv_desparasitacion_4">Fecha de proxima administración</string>
    <string name="ej_desparasitacion">NexGard</string>
    <string name="btn_desparasitacion_1">REGISTRAR DESPARASITACIÓN</string>

    <!--Strings usados en la pantalla de perfil de mascotas -->
    <string name="tv_nombre_mascota">Nombre:</string>
    <string name="btn_editar_mascota">Editar info</string>
    <string name="btn_ver_vacunas">VER VACUNAS</string>
    <string name="btn_ver_desparasitaciones">VER DESPARASITACIONES</string>

    <!--Strings usados en las cardViews de mascotas-->
    <string name="tv_tittle_perfiles">Mis mascotas</string>
    <string name="btn_ver_perfil">Ver perfil</string>

    <!--Strings usados en las cardViews vacunas-->
    <string name="ej_fecha_formato">Fec.Ap:</string>
    <string name="ej_fecha_formato2">Fec.Prox.Ap:</string>



</resources>