<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondogradiente"
    tools:context=".RegistrarMascotaActivity">

    <ImageButton
        android:id="@+id/imgBtnVolver_RM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="volver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btnvolver"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imgBtnAgregarFoto"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="@color/color_transparente"
        android:src="@drawable/icono_camara"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:text="@string/foto_mascota"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/ivMascota"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="102dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/registra_tu_mascota"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNombreMascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/nombre"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegistrar" />

    <EditText
        android:id="@+id/etNombreMascota"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_line_1"
        android:ems="10"
        android:hint="@string/ej_nombre_mascota"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/color_hint_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreMascota" />

    <TextView
        android:id="@+id/tvEspecie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/especie"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombreMascota" />

    <Spinner
        android:id="@+id/spinnerEspecie"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEspecie" />

    <TextView
        android:id="@+id/tvRaza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/razaMascota"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEspecie" />

    <EditText
        android:id="@+id/etRazaMascota"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/color_line_1"
        android:ems="10"
        android:hint="@string/ej_raza_mascota"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/color_hint_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRaza" />

    <TextView
        android:id="@+id/tvNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/nacimiento"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRazaMascota" />


    <TextView
        android:id="@+id/tvFechaNacimiento"
        android:layout_width="280dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/color_line_1"
        android:ems="10"
        android:text="@string/eligir_fecha"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNacimiento" />

    <TextView
        android:id="@+id/tvSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Sexo_Mascota"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFechaNacimiento" />

    <RadioGroup
        android:id="@+id/radioGroupSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSexo">

        <RadioButton
            android:id="@+id/rBtnHembra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:checked="true"
            android:padding="5dp"
            android:text="@string/hembra"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="571dp" />

        <RadioButton
            android:id="@+id/rBtnMacho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/macho"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="123dp"
            tools:layout_editor_absoluteY="580dp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnRegistrarMascota_F"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/color_btn_1"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/btn_registrar_mascota"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
