<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondogradiente"
    tools:context=".RegistrarseActivity">

    <ImageButton
        android:id="@+id/imgBtnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btnvolver" />

    <ImageView
        android:id="@+id/ivlogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnVolver"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-condensed-light"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/tvRegistrarCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivlogo" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/nombre"
        android:fontFamily="sans-serif-condensed-light"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegistrar" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/ej_nombre"
        android:inputType="text"
        android:ems="10"
        android:backgroundTint="@color/color_line_1"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/color_hint_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre" />

    <TextView
        android:id="@+id/tvemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/email_1"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <EditText
        android:id="@+id/etEmailUser"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/color_line_1"
        android:ems="10"
        android:hint="@string/ej_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/color_hint_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvemail" />

    <TextView
        android:id="@+id/tvClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clave"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="544dp" />


</androidx.constraintlayout.widget.ConstraintLayout>