<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageViewPerfilMascota"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                app:srcCompat="@drawable/icono_vacuna" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/imageViewPerfilMascota"
                android:orientation="vertical"
                android:gravity="start">

                <TextView
                    android:id="@+id/nombreMascota"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/nombre" />
                <TextView
                    android:id="@+id/textViewNombreVacuna"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/tv_vacuna_1" />
                <TextView
                    android:id="@+id/textViewFechaAplicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/ej_fecha_formato" />
                <TextView
                    android:id="@+id/textViewProximaAplicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/ej_fecha_formato2" />

                <Button
                    android:id="@+id/btnEditarVacuna"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/btn_ver_perfil"
                    android:textSize="18sp"
                    android:layout_gravity="end"
                    android:backgroundTint="@color/color_btn_1"
                    />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>