<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ivLogoInicio"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/descripcionLogo" />

    <TextView
        android:id="@+id/tvInicia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/inicia"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed-light"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoInicio" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="left"
        android:text="@string/email"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInicia"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:autofillHints="none"
        android:backgroundTint="@color/color_line_1"
        android:ems="10"
        android:hint="@string/ej_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/color_hint_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="left"
        android:text="@string/password"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:autofillHints="none"
        android:backgroundTint="@color/color_line_1"
        android:ems="10"
        android:hint="@string/ej_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/color_hint_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnIniciaSesion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/color_btn_1"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/inicia"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>