<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuMascotasActivity">

    <ImageButton
        android:id="@+id/imgBtnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="volverAHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btnvolver"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="252dp"
        android:layout_height="252dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/descripcionLogo"
        app:layout_constraintEnd_toEndOf="@+id/tvSaludo"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/tvSaludo"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnVolver"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvSaludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/menu_mascotas"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnRegistrarMascota"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/btnRegistrarMascota"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <Button
        android:id="@+id/btnRegistrarMascota"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/color_btn_1"
        android:fontFamily="sans-serif-condensed-light"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/btn_agregar_mascota"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnVerMascotas"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnVerMascotas"
        app:layout_constraintTop_toBottomOf="@+id/tvSaludo" />

    <Button
        android:id="@+id/btnVerMascotas"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/color_btn_1"
        android:fontFamily="sans-serif-condensed-light"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/btn_ver_mascotas"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnVerRecordatorios"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnVerRecordatorios"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrarMascota" />

    <Button
        android:id="@+id/btnVerRecordatorios"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/color_btn_1"
        android:fontFamily="sans-serif-condensed-light"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/btn_recordatorios"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVerMascotas"
        app:layout_constraintVertical_bias="0.081" />

</androidx.constraintlayout.widget.ConstraintLayout>